# osu-sync

./: .gitignore  README.md  dev-start.bat  dev-start.sh  lefthook.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  uv.toml
.github/workflows/: release.yml
installer/: osu-sync.iss
scripts/: bump_version.py  check-tailwind-colors.py
src/: main.py  update_checker.py
src/api/: config.py  main.py  osu_client.py  schemas.py
src/core/: database.py  downloader.py  filter_schema.py  scanner.py
src/osu_db_construct/: osu_collection.py  osu_db.py  osu_scores.py  vlq_base128_le.py
ui/: biome.json  index.html  knip.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  types.ts
ui/src/components/: GlobalPreviewPlayer.tsx  QueueNotificationManager.tsx  QueuePanel.tsx  ScanProgress.tsx  SearchForm.tsx  SearchResults.tsx  SettingsPanel.tsx  StatCard.tsx
ui/src/components/pages/: QueuePage.tsx  SearchPage.tsx  SettingsPage.tsx
ui/src/components/search/: FilterPanel.tsx  PreviewPlayer.tsx  ResultCard.tsx  ResultList.tsx  helpers.ts
ui/src/components/search/filter-components/: index.tsx
ui/src/components/search/hooks/: useSearchFilters.ts
ui/src/components/search/types/: index.ts
ui/src/components/search/utils/: index.ts
ui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx  Tabs.tsx  Toast.tsx  Toggle.tsx
ui/src/hooks/: useApiClient.ts
ui/src/utils/: downloadUtils.ts  eventSource.ts
