[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osu-sync"
version = "0.1.0"
description = "osu! beatmap synchronization tool"
authors = [{name = "AkaakuHub", email = "akaaku2021media01@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.25.0",
    "aiolimiter>=1.1.0",
    "pydantic>=2.5.0",
    "pywebview>=4.4.1",
    "kaitaistruct>=0.11",
    "nuitka==2.8.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
osu-sync = "src.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Ruff formatter prefers breaking before binary operators; ignore W503 to avoid conflicts.
# E203 is incompatible with Black/Ruff slicing style; E501 is handled by the formatter.
# E203: formatter-compatible slices, E501: handled by formatter
ignore = ["E203", "E501"]
# Keep a focused set of rules; extend as needed.
select = [
    "E",  # pycodestyle (core)
    "F",  # pyflakes
    "I",  # import sorting
    "UP", # pyupgrade
    "RUF" # Ruff-specific (light)
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.uv]
# dev グループも uv sync で自動インストールさせる
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
